# SIGEIN

./: .env.example  .gitignore  .snyk  .vercelignore  README.md  cad_constants.py  carga_produtos_segem.py  create_admin.py  database.py  dependencies.py  fix_movements_fk.py  main.py  middleware_audit.py  migrate_logs_schema.py  migrate_paiol_tables.py  models.py  package-lock.json  package.json  paiol_constants.py  permissions_constants.py  pyproject.toml  requirements.txt  run.bat  run.ps1  security.py  snyk-scan.ps1  sync_ibge.py  templating.py  ui_alerts.py  utils.py  vercel.json
backups/: sigein_data.sql  sigein_data_neon.sql  sigein_schema.sql
migrations/: add_brands_nome_unique.sql  create_cad_dashboard_widgets.sql  create_cad_ocorrencias.sql  create_cad_opcoes_lista.sql  fix_movements_data_utc_to_brasilia.sql  fix_processos_nullable_origem.sql  fix_processos_unidade_null.sql
routers/: api_geografica.py  auth.py  brands.py  cad.py  categories.py  dashboard.py  eprotocolo.py  equipment.py  equipment_types.py  frota.py  geografia.py  logs.py  movements.py  paiol.py  paiol_cadastro.py  paiol_estoque.py  paiol_relatorios.py  paiol_seguranca.py  paiol_workflow.py  perfis.py  permissions.py  permissions_examples.py  products.py  segem.py  states.py  stock.py  units.py  users.py
scripts/: fix_movements_timezone.py  migrate_local_to_neon.py
services/: audit_logs_service.py  cad_dashboard_service.py  cad_ocorrencias_service.py  cad_opcoes_service.py  ibge_service.py  paiol_assinatura_service.py  paiol_audit.py  paiol_cautela_service.py  paiol_custodia_service.py  (+10 more)
(+95 files in other folders)
