[project]
name = "sigein"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.137.0",
    "starlette>=1.3.1",
    "uvicorn",
    "jinja2",
    "sqlalchemy",
    "databases",
    "itsdangerous",
    "psycopg2-binary",
    "python-multipart>=0.0.31",
    "pytz",
    "reportlab",
    "openpyxl",
    "passlib",
    "bcrypt<4.0"
]

[tool.vercel]
entrypoint = "main:app"